<resources>
    <string name="app_name">TikiTaka-Android</string>
    <string name="login_comment">티키타카를 통해 다양한 사람들과 대화를 해 보세요!</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notUser">계정이 없으신가요?</string>
    <string name="signUp_comment">지금 바로 티키타카 가입해 보세요!</string>
    <string name="name">이름</string>
    <string name="password_check">Password check</string>
    <string name="signUp">SignUp</string>
    <string name="login_fail">id와 password가 일치하지 않습니다</string>
    <string name="go_login">로그인하기</string>
    <string name="add_friends">친구 추가</string>
    <string name="chat">채팅하기</string>
    <string name="block">차단</string>
    <string name="cancel">취소</string>
    <string name="toBlock">차단하기</string>
    <string name="unblock">차단 해제</string>
    <string name="change">변경하기</string>
    <string name="search_friend">검색을 통해 친구를 찾아보세요!</string>
    <string name="notExist_id">존재하지 않는 아이디입니다.</string>
    <string name="send">전송</string>
    <string name="end_recording">녹음 끝내려면 아이콘을 클릭해 주세요.</string>
    <string name="unknown_request">알 수 없는 요청입니다.</string>
    <string name="already_friend">이미 친구입니다.</string>
    <string name="myself_request">자신에게 친구 요청을 보낼 수 없습니다.</string>
    <string name="already_block">이미 차단된 친구입니다.</string>
    <string name="auto_login">자동 로그인</string>
</resources>