<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign.Ui.Fragment.LoginFragment">

    <ImageView
        android:id="@+id/login_logo_imageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/icon_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_comment_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/login_comment"
        android:textColor="@color/mainCoral"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo_imageView" />

    <EditText
        android:id="@+id/login_id_editText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/login_id_button"
        android:hint="@string/id"
        android:paddingLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_comment_textView" />

    <EditText
        android:id="@+id/login_password_editText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/login_id_button"
        android:hint="@string/password"
        android:paddingLeft="15dp"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_id_editText" />

    <TextView
        android:id="@+id/login_loginfail_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/login_fail"
        android:textColor="@color/red"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_editText"
        android:layout_marginTop="5dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/login_login_button"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_editText" />

    <Button
        android:id="@+id/login_goSign_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:text="@string/notUser"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>