<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign.Ui.Fragment.SignUpFragment">

    <ImageView
        android:id="@+id/sign_logo_imageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/icon_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_comment_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/signUp_comment"
        android:textColor="@color/mainCoral"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_logo_imageView" />

    <EditText
        android:id="@+id/sign_name_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/login_id_button"
        android:hint="@string/name"
        android:paddingLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_comment_textView" />

    <EditText
        android:id="@+id/sign_id_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/login_id_button"
        android:hint="@string/id"
        android:paddingLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_name_editText" />

    <EditText
        android:id="@+id/sign_password_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/login_id_button"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_id_editText" />

    <EditText
        android:id="@+id/sign_passwordCheck_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/login_id_button"
        android:hint="@string/PasswordCheck"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_password_editText" />

    <TextView
        android:id="@+id/sign_fail_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="test"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_passwordCheck_editText" />

    <Button
        android:id="@+id/sign_signUp_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/login_login_button"
        android:text="@string/signUp"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_passwordCheck_editText" />

    <Button
        android:id="@+id/sign_goLogin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/go_login"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_signUp_button" />


</androidx.constraintlayout.widget.ConstraintLayout>